--- a/co-olx/feedback.css
+++ b/co-olx/feedback.css
@@ -14,27 +14,39 @@ html,body{
   -webkit-filter: blur(3px);
   
 }
-.container{
-    position: relative;
-    
-}
 .container h1{
-    font-size: 23px;
-    color: white;
+    font-size: 28px;
+    margin-bottom: 10px;
+    color: rgb(33 71 112);
     text-align: center;
+    text-shadow: 1px 1px 1px black;
 }
-.box{
+.container{
     position: absolute;
-    height: 72vh;
+    opacity: 90%;
+    
+    height: 80vh;
     width: 400px;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
-    padding: 50px;
-    background-color: #086a97;
+}
+.box{
+    
+    
+    
+
+    
+    
+    padding: 30px;
     border-radius: 10px;
     flex-direction: column;
     box-shadow:8px 10px 8px rgb(34, 34, 34);
+    border-style: solid;
+    border-width: 10px;
+    border-color: rgb(33 71 112);
+    border-spacing: 20px;
+    background-color: rgb(255, 255, 255);
 }
 .star{
     text-align: center;
@@ -66,7 +78,7 @@ html,body{
     display: inline-block;
     top: 0px;
     left: 0;
-    color: yellow;
+    color: #0066ff;
     opacity: 0;
 }
 .star label:hover:after,
@@ -79,7 +91,7 @@ html,body{
     margin-top: 35px;
     padding: 8px;
     font-size: 20px;
-    color: white;
+    color: black;
 }
 #feed
 {
@@ -99,7 +111,6 @@ html,body{
     color: white;
     text-shadow: 1px 1px 1px white;
     border-radius: 5px;
-    border-color: white;
     cursor: pointer;
     padding: 5px 20px;
     transition: 0.3s;
